# ppi

./: .gitignore  .importlinter  .spectral.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  redocly.yaml
.githooks/: commit-msg  install.sh
.github/: pull_request_template.md
.github/workflows/: api-contract.yml  contracts.yml  i18n.yml
contracts/: README.md  errors.yaml  progress-events.schema.json  webview-protocol.schema.json
docs/: api-contract-workflow.md  api-versioning-policy.md  architecture.md  frontend-api-platform-migration.md
frontend/: .gitignore  MIGRATION.md  knip.json  package-lock.json  package.json  vite.webview.config.ts  vitest.config.ts  vitest.setup.ts
frontend/scripts/: i18next-cli.mjs
frontend/src/: App.tsx  i18n-table-keys.ts  navigation.tsx  webview-main.tsx
openapi/: openapi.bundle.yaml  openapi.json
openapi/baseline/: README.md
scripts/: check_api_runtime_contract.sh  check_frontend_boundaries.py  check_frontend_size.sh  check_mypy_p0.sh  check_openapi.sh  diff_openapi.sh  export_openapi.py  export_workspace.py
specs/004-vscode-extension-bridge/: data-model.md  plan.md  spec.md  tasks.md
specs/007-functional-core-rop-ibis-refactor/: analysis-report.md  architecture-review.md  data-model.md  implementation-handoff.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-rop-pipeline-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-worker-ipc-runtime-boundary/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-frontend-api-platform/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-contract-runtime-codegen/: analysis-report.md  data-model.md  plan.md  quickstart.md  requirements-traceability.md  research.md  spec.md  tasks.md
tests/architecture/: test_duckdb_boundaries.py  test_layering.py  test_no_exception_driven_domain_flow.py  test_raw_sql_guardrails.py  test_rop_migration_bar.py  test_typed_stage_interfaces.py
tests/characterization/: test_analysis_output_equivalence.py  test_odoo_project_analysis_pipeline.py
tests/contract/: test_cli_contract.py  test_contract_parity.py  (+6 more)
vscode-extension/: README.md  esbuild.test.mjs  package-lock.json  package.json  tsconfig.json
(+432 files in other folders)
