[project]
name = "ppi"
version = "0.1.0"
description = "Git history metrics pipeline for Python/Odoo projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "complexipy>=5.6.1",
    "deal>=4.24.0",
    "duckdb>=1.1.0",
    "Expression>=5.0.0",
    "fastapi>=0.115.0",
    "ibis-framework[duckdb]>=9.0.0",
    "msgspec>=0.19.0",
    "pydantic>=2.10.0",
    "radon>=6.0.1",
    "toolz>=0.12.1",
    "uvicorn>=0.32.0",
]

[project.scripts]
ppi = "ppi.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
    "schemathesis>=4.0.0",
    "mypy>=1.10",
    "PyYAML>=6.0.2",
    "Jinja2>=3.1.4",
    "jsonschema>=4.23.0",
    "import-linter>=2.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppi"]

[tool.hatch.build.targets.editable]
packages = ["src/ppi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["fixtures", ".hypothesis"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "contract: contract tests",
    "integration: integration tests",
    "architecture: architecture guardrail tests",
    "golden: golden-output comparison tests",
    "smoke: smoke tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "ppi.cli.*",
    "ppi.server.*",
    "ppi.adapters.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "yaml",
    "jsonschema",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ppi.devtools.codegen.*",
    "ppi.generated.*",
    "ppi.devtools.cli",
    "ppi.runtime.progress",
    "ppi.types.*",
    "ppi.contracts.*",
]
ignore_errors = false
disallow_any_generics = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
